Some refacror
